syntax = "proto3";

package service;
option go_package = "homework/internal/api/handlers/grpc/contracts/langs/go;service";
import "google/protobuf/empty.proto";

service AdService {
  rpc GetAd(GetAdRequest) returns (AdResponse) {}
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (google.protobuf.Empty) {}
  rpc SearchAds(SearchAdsRequest) returns (ListAdsResponse) {}
  rpc ListAds(ListAdsRequest) returns (ListAdsResponse) {}
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message GetAdRequest {
  int64 ad_id = 1;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
}

message SearchAdsRequest {
  string text = 1;
}

message ListAdsRequest {
  string published = 1;
  string user_id = 2;
  string date = 3;
}

message CreateUserRequest {
  string nickname = 1;
  string email = 2;
}

message UpdateUserRequest {
  int64 user_id = 1;
  string nickname = 2;
  string email = 3;
}

message GetUserRequest {
  int64 user_id = 1;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
  bool published = 5;
}

message ListAdsResponse {
  repeated AdResponse list = 1;
}

message UserResponse {
  int64 user_id = 1;
  string nickname = 2;
  string email = 3;
}